--- a/Alegolas Web/Assets/CSS/Style.css
+++ b/Alegolas Web/Assets/CSS/Style.css
@@ -1,93 +1,84 @@
-* {
+*{
     box-sizing: border-box;
-  }
-  
-  /* Header */
-  body {
+    list-style: none;
+    text-decoration: none;
     margin: 0;
     padding: 0;
-    font-size: 1.10em;
-    background:linear-gradient(lightsteelblue,cornsilk, lightslategrey);
-    position: sticky;
-    overflow-x: hidden;
-  }
-  
-  /* Menu container */
-  .menu {
-    width: 100vw;
-    background: linear-gradient(#203031, lightslategrey, lightsteelblue);
-    font-family: fantasy;
+}
+body{
+    width: 100dvw;
+    height: 100dvh;
     display: flex;
     align-items: center;
+    position: relative;
+    line-height: 1.4;
+    font-size: 1.3em;
+    background-color: #E6f2f3;
+    overflow-x: hidden;
+}
+/* Login */
+.wrapper{
+    margin: 30% auto;
+    position: relative;
+    width: 30em;
+    height: 28em;
+    background: transparent;
+    border: 4px solid darkslateblue;
+    border-radius: 20px;
+    display: block;
     justify-content: center;
-  }
-  
-  ul li {
-    padding: 2px 40px 0;
-    list-style: none;
-    font-size: 24px;
-    color: cornsilk;
-    display: inline-flex;
-  }
-  
-  /* Menu */
-  .container {
-    max-width: 100%;
-    text-transform: inherit;
-    text-align: justify;
-    overflow-wrap: break-word;
-  }
-
-  .icon-nav{
-    width: 46px;
-  }
-  
-  /* Slider Menu */
-  .slider-menu {
-    width: 80vw;
-    height: 500px;
-    border-radius: 2%;
-    background-color: #303031;
+    align-items: center;
+}& .wrapper .form-login{
+    width: 100dvw;
+    padding: 40px;
+}& .form-login img{
+    position: absolute;
+    width: 6.6em;
     display: flex;
+    margin: -2% 35%;
+}
+.input-box{
+    position: relative;
+    display: block;
+    top: 150px;
+    width: 31%;
+    margin: 20px 30px;
+    padding: 5px;
+    color: darkslateblue;
+    border-bottom: 2px solid darkblue;
     text-transform: capitalize;
-  }
-  
-  .slider-menu figure > img {
-    width: 220px;
-    margin: 0;
-    padding: 0;
-    border: 5px solid steelblue;
-    max-width: 800px;
-  }
-  
-  .slider-menu figcaption {
-    background-color: #303031;
-  }
-  
-  /* Footer */
-footer {
-  background: linear-gradient(lightslategrey, #27313c);
-  color: lightblue;
-  text-align: center;
-  padding: 10px 38%;
+    font-size: 1.7rem;
+    font-weight: 600;
+}& .input-box input{
+    background: transparent;
+    outline: none;
+    border: none;
+    color: #27313c;
+    font-size: 22px;
+}
+.remember-pwd{
+    margin-left: 30px;
+    margin-top: 150px;
+}& .remember-pwd  a{
+    color: darkred;
+    font-weight: 600;
+}
+.btn-login {
+    margin: 25px 190px;  /*Mueve hacia abajo el botón de inicio de sesión*/
+    padding: 12px 18px;
+    border-radius: 30px;
+    background: whitesmoke;
+    color: darkblue;
+    font-weight: bold;
+    font-size: 1.1rem;
+    text-transform: capitalize;
 }
 
-footer > p {
-  color: cornsilk;
-}
-
-hr{
-  margin: 0 auto; /* Ajuste el margen para centrar el hr */
-  background: lightsteelblue;
-  border-radius: 5px;
-}
-
-/* Contenedor para las imágenes */
-.icon-container {
-  display: inline-block;
-}
-
-/* Estilos de las imágenes */
-.icon-social {
-  width: 50px;
+.login-register {
+    margin: 1px 70px; /* Mueve hacia abajo el contenedor login-register */
+}& .login-register p{
+    color: darkred;
+    margin: 0 30px;
+    font-weight: bold;
+    font-size: 1em;
 }
