--- a/Alegolas Web/Assets/CSS/main.css
+++ b/Alegolas Web/Assets/CSS/main.css
@@ -1,10 +1,11 @@
-*{
+* {
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
     margin: 0;
     padding: 0;
 }
+
 body {
     margin: 0;
     padding: 0;
@@ -17,159 +18,198 @@ body {
     background-color: #E6f2f3;
     overflow-x: hidden;  
 }
-nav ul{
+
+/* Navbar */
+nav ul {
     width: 100%;
     height: auto;
-    background: linear-gradient(lightslategrey,#E6f2f3);
+    background: linear-gradient(lightslategrey, #E6f2f3);
     text-transform: capitalize;
-    color: teal;
     font-weight: bold;
     font-size: 1.6rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-}
-nav ul li{
+} 
+
+nav ul li {
     display: inline-block;
     line-height: 80px;
     margin: 20px;
+    color: darkslateblue;
 }
 
 /* Contenedor principal */
-.header>h2{
+.header > h2 {
     top: 13px;
     font-size: 1.4em;
     text-align: center;
     margin-top: 20px;
-    color: brown;
+    color: darkred;
     font-weight: 800;
 }
-h2.Menu{
-    color: rebeccapurple;
+
+h2.Menu {
     text-transform: capitalize;
     font-weight: 800;
     font-family: 'Times New Roman', Times, serif;
 }
 
-.container {
-  width: 80%; /* Ancho del contenedor */
-  margin: 0 auto; /* Centrar el contenedor */
-  padding: 20px; /* Espaciado interno del contenedor */
-  background-color: #f2f2f2; /* Color de fondo del contenedor */
+.informacion {
+    width: 100%;
+    padding: 10px 19px;
 }
 
-.container p {
-  text-align: justify; /* Justificar el texto dentro del contenedor */
-}
-/******************************************Parte del Responsive************************************/
-/* @media(max-width:991px){
-
+.informacion > p {
+    font-size: 1.3rem;
+    font-style: italic;
+    text-align: justify;
 }
 
-@media(max-width:768px){
-
+/* Menu */
+.Container-menu {
+    min-width: 100vw;
+    display: flex;
+    flex-direction: row;
 }
 
-@media(max-width:500px){
-
+.Cards {
+    width: 13em;
+    height: 20em;
+    margin: 12px;
+    background: darkcyan;
+    border-radius: 15px;
+    position: relative;
 }
 
-@media(max-width:420px){
-
+.Cards img.Sentimientos {
+    width: 15rem;
+    height: 14rem;
+    display: block;
+    border-radius: 14px;
 }
 
-@media (max-width: 335px) and (max-height: 726px){
-
-} */
-
-@media screen and (min-width:230px) and (max-width:1300px){
-    body{
-        font-size: 0.9rem;
-        background-color: #E6f2f3;
-    }
-    nav ul {
-        width: 100%;
-        height: auto;
-        background: linear-gradient(lightslategrey,#E6f2f3);
-        font-size: 1.4rem;
-        color:teal;
-        flex-direction: column;
-        align-items: center;
-    }
-    nav ul li{
-        line-height: 1.5; /* Ajuste del espacio entre elementos */
-        margin: 10px 0;
-    }
-    .header>h2{
-        font-size: 1.3rem;
-        margin-top: 20px;
-        color: brown;
-        font-weight: 700;
-    }
-    p {
-       font-size: 0.9rem;
-       max-width: 100%;
-       word-wrap:break-word;
-    }
+.Cards h4 {
+    font-weight: bold;
+    font-size: 20px;
+    text-align: center;
+    text-transform: uppercase;
 }
+
+.Cards h4#celos {
+    color: yellow;
+    margin-left: 140px;
+    margin-top: -210px;
+}
+
+.Cards h4#amor {
+    color: darkred;
+    font-weight: bold;
+    margin-right: -4px;
+    margin-top: -5px;
+}
+
+.Cards h4#admiracion {
+    color: orange;
+    margin-left: 90px;
+    margin-top: -212px;
+}
+
+.Cards h4#adoracion {
+    color: darkgreen;
+    margin-top: -22px;
+}
+
+.Cards h4#angustia {
+    color: greenyellow;
+    margin-top: -210px;
+}
+
+.Cards h4#arrepentimiento {
+    color: red;
+    margin-top: -220px;
+}
+
+.Cards button.See-more {
+    background: whitesmoke;
+    padding: 10px;
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    text-transform: capitalize;
+    color: darkturquoise;
+    font-weight: bold;
+    border-radius: 22px;
+}
+
+/* Footer */
+footer {
+    width: 100dvw;
+    margin-top: 20px;
+    background: linear-gradient(#e6f2f3, #27313c);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+footer > p {
+    color: darkred;
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+hr {
+    border-color: whitesmoke;
+    width: 100%;
+    margin-top: 10px; 
+}
+
+.icon-container img {
+    margin: 15px;
+    max-width: 60px;
+    max-height: 70px;
+}
+
 /* Other items */
-.ico-nav{
+.ico-nav {
     margin: 0;
     padding: 0;
     width: 100px;
     height: auto;
 }
-li>a:hover{
-    color:gold;
+
+li > a:hover {
+    color: gold;
 }
-h2.Menu{
-    margin: 18px auto;
-    color: rebeccapurple;
-    font-weight: bold;
-    font-family: 'Times New Roman', Times, serif;
-}
-.Sentimientos{
-    bottom: 0px;
-    width: 1200px;
-    height: 600px;
-    border-radius: 15px;
-    box-shadow:3px 3px 20px -6px  lightslategray;
-}
-.See-more{
-    position: absolute;
-    padding: 10px 20px;
-    background-color: #27313c;
-    border-radius: 18px;
-    color: whitesmoke;
-    font-weight: 600;
-}
-.ico-opc{
-    position: absolute;
-    display: flex;
-    width: 40px;
-    background-color: #E6f2f3;
-    border-radius: 50%;
+
+@media screen and (min-width: 230px) and (max-width: 1300px) {
+    body {
+        font-size: 0.9rem;
     }
-.Titulo{
-    position: absolute;
-    font-size: 18px;
-    font-weight: 700;
-    color: goldenrod;
-}
 
-/*Footer*/
-.footer {
-  text-align: center; /* Para centrar el contenido del footer */
-  padding: 20px; /* Ajusta según tu preferencia */
-}
+    nav ul {
+        background: linear-gradient(lightslategrey, #E6f2f3);
+        font-size: 1.4rem;
+        color: teal;
+        flex-direction: column;
+        align-items: center;
+    }
 
-.icon-container {
-  margin-top: 20px; /* Ajusta según tu preferencia */
-}
+    nav ul li {
+        line-height: 1.5;
+        margin: 10px 0;
+    }
 
-.icon-container img {
-  width: 50px; /* Ajusta el tamaño de los iconos */
-  height: auto; /* Para mantener la proporción */
-  margin: 0 10px; /* Espacio entre los iconos */
-}
+    .header > h2 {
+        font-size: 1.3rem;
+        margin-top: 20px;
+        color: brown;
+        font-weight: 700;
+    }
 
+    .Container-menu .Cards .Sentimientos {
+        width: 14rem;
+    }
+}
